fixed dark mode issue and revised some text

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
@@ -32,6 +32,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #0f0f0f;
+  color: #e5e7eb;
 }
 
 h1 {
